# xvcf-rs

./: Cargo.toml  README.md
src/: detect.rs  lib.rs
tests/: i.bcf.csi  t.bcf  t.vcf  t.vcf.gz.tbi  u.bcf
