[package]
name = "xvcf"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1.0.26"
indexmap = "2.0.0"
noodles = { version = "0.52.0", features = [
    'vcf',
    'bcf',
    'csi',
    'tabix',
    'bgzf',
    'core',
] }
noodles-util = { version = "0.23.0", features = ['variant'] }
